--- a/manager/viewProject/project-dashboard.html
+++ b/manager/viewProject/project-dashboard.html
@@ -48,10 +48,15 @@
             </div>
             
             <ul class="sidebar-menu">
-                <li><a href="../../admin/viewProject/project-dashboard.html" class="active" id="dashboardLink"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                <li><a href="../../admin/projectView/datasource.html"><i class="fas fa-database"></i> Data Sources</a></li>
-                <li><a href="../../admin/projectView/kpis.html"><i class="fas fa-tachometer-alt"></i> KPIs</a></li>
-                <li><a href="../../admin/projectView/notifiaction.html"><i class="fas fa-bell"></i> Notifications</a></li>
+                <li><a href="../../manager/viewProject/project-dashboard.html" class="active" id="dashboardLink"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="../../manager/viewProject/risks.html"><i class="fas fa-exclamation-triangle"></i> Risks</a></li>
+                <li><a href="../../manager/viewProject/kpis.html" id="kpisLink"><i class="fas fa-bullseye"></i> KPIs</a></li>
+                <li><a href="../../manager/viewProject/Sales-Performance.html"><i class="fas fa-chart-line"></i> Sales Performance</a></li>
+                <li><a href="../../manager/viewProject/feedback.html"><i class="fas fa-comment"></i> Feedback</a></li>
+                <li><a href="../../manager/viewProject/todo.html"><i class="fas fa-tasks"></i> To-do List</a></li>
+                <li><a href="../../manager/viewProject/budget.html"><i class="fas fa-wallet"></i> Budget</a></li>
+                <li><a href="../../manager/viewProject/notifications.html"><i class="fas fa-bell"></i> Notifications</a></li>
+                <li><a href="../../manager/viewProject/reports.html"><i class="fas fa-file-export"></i> Reports</a></li>
             </ul>
         </aside>
 
