--- a/admin/projectView/notifiaction.html
+++ b/admin/projectView/notifiaction.html
@@ -49,6 +49,8 @@
                 <li><a href="../../admin/projectView/project-dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="../../admin/projectView/datasource.html"><i class="fas fa-database"></i> Data Sources</a></li>
                 <li><a href="../../admin/projectView/kpis.html"><i class="fas fa-tachometer-alt"></i> KPIs</a></li>
+                <li><a href="../../admin/projectView/tasks.html"><i class="fas fa-tasks"></i>Tasks</a></li>
+
                 <li><a href="../../admin/projectView/notifiaction.html" class="active"><i class="fas fa-bell"></i> Notifications</a></li>
             </ul>
         </aside>
