--- a/manager/view-projects.html
+++ b/manager/view-projects.html
@@ -31,7 +31,7 @@
                 <li><span class="role-badge role-admin">Manager</span></li>
                 <li><a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="view-projects.html" class="active"><i class="fas fa-chart-line"></i> View Projects</a></li>
-                <li><a href="update-profile.html"><i class="fas fa-user"></i> Profile</a></li>
+                <li><a href="../manager/updateprofile.html"><i class="fas fa-user"></i> Profile</a></li>
             </ul>
         </aside>
 
@@ -245,8 +245,8 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <button class="view-dashboard-btn" onclick="navigateToProjectDashboard(${project.id})">
-                          <a href="projectView/project-dashboard.html">  <i class="fas fa-chart-line"></i> View Dashboard</a>
+                        <button class="view-dashboard-btn">
+                          <a href="viewProject/project-dashboard.html">  <i class="fas fa-chart-line"></i> View Dashboard</a>
                         </button>
                     </div>
                 `;
