--- a/manager/viewProject/risks.html
+++ b/manager/viewProject/risks.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../../css/comman.css"/>
     <link rel="stylesheet" href="../../css/risk.css">
+    <link rel="stylesheet" href="../../css/dashboard.css">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
@@ -29,16 +31,16 @@
     <div class="dashboard">
         <aside class="sidebar">
             <div class="project-info">
-                <h2 id="projectName">Project Name</h2>
-                <span class="project-status" id="projectStatus">Active</span>
+                <h2 id="projectName">Digital Transformation Initiative</h2>
+                <span class="project-status active" id="projectStatus">Active</span>
                 
                 <div class="project-meta">
                     <i class="fas fa-calendar-alt"></i>
-                    <span id="projectDates">Jan 1, 2023 - Dec 31, 2023</span>
+                    <span id="projectDates">Mar 15, 2023 - Jun 30, 2023</span>
                 </div>
                 <div class="project-meta">
                     <i class="fas fa-user"></i>
-                    <span id="projectCreator">Created by: John Doe</span>
+                    <span id="projectCreator">Created by: Sarah Johnson</span>
                 </div>
                 <div class="project-meta">
                     <i class="fas fa-chart-pie"></i>
@@ -52,7 +54,6 @@
                 <li><a href="../../manager/viewProject/Sales-Performance.html"><i class="fas fa-chart-line"></i> Sales Performance</a></li>
                 <li><a href="../../manager/viewProject/feedback.html"><i class="fas fa-comment"></i> Feedback</a></li>
                 <li><a href="../../manager/viewProject/todo.html"><i class="fas fa-tasks"></i> To-do List</a></li>
-                <li><a href="../../manager/viewProject/budget.html"><i class="fas fa-wallet"></i> Budget</a></li>
                 <li><a href="../../manager/viewProject/notifications.html"><i class="fas fa-bell"></i> Notifications</a></li>
                 <li><a href="../../manager/viewProject/reports.html"><i class="fas fa-file-export"></i> Reports</a></li>
             </ul>
@@ -231,8 +232,6 @@
                                 <select id="swal-status" class="swal2-select" required>
                                     <option value="Open">Open</option>
                                     <option value="In Progress">In Progress</option>
-                                    <option value="Resolved">Resolved</option>
-                                    <option value="Closed">Closed</option>
                                 </select>
                             </div>
                         </form>
@@ -333,9 +332,7 @@
                             <button class="action-btn edit-btn" data-id="${risk.Risk_ID}">
                                 <i class="fas fa-edit"></i> 
                             </button>
-                            <button class="action-btn resolve-btn" data-id="${risk.Risk_ID}">
-                                <i class="fas fa-check-circle"></i> 
-                            </button>
+                          
                             <button class="action-btn delete-btn" data-id="${risk.Risk_ID}">
                                 <i class="fas fa-trash-alt"></i> 
                             </button>
