--- a/admin/projectView/project-dashboard.html
+++ b/admin/projectView/project-dashboard.html
@@ -48,7 +48,7 @@
             </div>
             
             <ul class="sidebar-menu">
-                <li><a href="../../admin/viewProject/project-dashboard.html" class="active" id="dashboardLink"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                <li><a href="#" class="active" id="dashboardLink"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                 <li><a href="../../admin/projectView/datasource.html"><i class="fas fa-database"></i> Data Sources</a></li>
                 <li><a href="../../admin/projectView/kpis.html"><i class="fas fa-tachometer-alt"></i> KPIs</a></li>
                 <li><a href="../../admin/projectView/tasks.html"><i class="fas fa-tasks"></i>Tasks</a></li>
