--- a/langingPage.html
+++ b/langingPage.html
@@ -155,7 +155,7 @@
         <p class="welcome-text">Comprehensive solution for management reporting and strategic analysis</p>
         
         <div class="role-cards">
-            <div class="role-card admin-card" onclick="window.location.href='./admin/login.html'">
+            <div class="role-card admin-card" onclick="window.location.href='./login.html'">
                 <div class="role-icon">
                     <i class="fas fa-user-shield"></i>
                 </div>
