--- a/login.html
+++ b/login.html
@@ -263,7 +263,7 @@
             <div class="mb-3">
                 <input type="password" class="form-control" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn" onclick="loggedIn()">Login</button>
+            <button type="submit" class="btn" onclick="loggedIn()"><a href="./admin/dashboard.html">login</a></button>
         </form>
         <div class="links">
             <a href="forgetPassword.html">Forgot your password?</a>
@@ -315,7 +315,7 @@
             // Add your login functionality here
             console.log("Login submitted");
             // In a real implementation, you would validate credentials first
-            window.location.href = "../analyst/update-profile.html";
+            window.location.href = "../admin/update-profile.html";
         }
     </script>
 </body>
