--- a/admin/user-mangement.html
+++ b/admin/user-mangement.html
@@ -17,7 +17,6 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="#"><i class="fas fa-bell"></i> Notifications</a></li>
                     <li><a href="update-profile.html"><i class="fas fa-user"></i> Profile</a></li>
                     <li><a href="../langingPage.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                 </ul>
@@ -30,7 +29,7 @@
         <aside class="sidebar">
             <ul class="sidebar-menu">
                 <li><span class="badge badge-admin">Admin</span></li>
-                <li><a href="#"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
+                <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
                 <li><a href="user-mangement.html" class="active"><i class="fas fa-users"></i> <span>User Management</span></a></li>
                 <li><a href="Project-management.html"><i class="fas fa-project-diagram"></i> <span>Project management</span></a></li>
                 <li><a href="view-projects.html"><i class="fas fa-chart-line"></i> <span>View projects</span></a></li>
